--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Kapreka's Number</title>
+    <title>Kapreka's Number Calculator</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css" />
@@ -53,7 +53,7 @@
             placeholder="0"
           />
         </div>
-        <button id="btn" type="button">show</button>
+        <button id="btn" type="button">See Steps by Steps</button>
       </div>
       <div>
         <p id="show"></p>
@@ -61,7 +61,7 @@
 
       <div class="control">
         <button id="btn2" style="opacity:0" type="button">
-          <a href="#sec2">Show me</a>
+          <a href="#sec2">Calculate</a>
         </button>
       </div>
     </div>
