--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             placeholder="0"
           />
         </div>
-        <button id="btn" type="button">See Steps by Steps</button>
+        <button id="btn" type="button">Calculate</button>
       </div>
       <div>
         <p id="show"></p>
@@ -61,7 +61,7 @@
 
       <div class="control">
         <button id="btn2" style="opacity:0" type="button">
-          <a href="#sec2">Calculate</a>
+          <a href="#sec2">See Steps by Steps</a>
         </button>
       </div>
     </div>
