--- a/index.html
+++ b/index.html
@@ -53,16 +53,14 @@
             placeholder="0"
           />
         </div>
-        <button id="btn" type="button">Calculate</button>
+        <button id="btn" class="btn btn-success">Calculate</button>
       </div>
       <div>
         <p id="show"></p>
       </div>
 
       <div class="control">
-        <button id="btn2" style="opacity:0" type="button">
-          <a href="#sec2">See Steps by Steps</a>
-        </button>
+        <button id="btn2" class="btn btn-success"><a href="#sec2">See Steps by Steps</a></button>
       </div>
     </div>
 
