--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
 
       <div class="control">
-        <button id="btn2" class="btn btn-success"><a href="#sec2">See Steps by Steps</a></button>
+        <a href="#sec2" id="btn2" class="btn btn-success hide">See Steps by Steps</a>
       </div>
     </div>
 
